--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,10 +14,12 @@
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
+		
+		<h1>Blog</h1>
+		<p>Welcome to our blog!</p>
+		<p>Here we share our thoughts and experiences.</p>
+		<p>Stay tuned for more updates!</p>
 
-		<h1>About Us</h1>
-		<p>We are a team of passionate developers.</p>
-		<p>We love building amazing web applications.</p>
-		<p>We are always learning and improving our skills.</p>
+		<p>Loading ... </p>
 	</body>
 </html>
