--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,6 +20,11 @@
 		<p>Here we share our thoughts and experiences.</p>
 		<p>Stay tuned for more updates!</p>
 
-		<p>Loading ... </p>
+		<ul>
+			<li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+      		<li><a href="/posts/post-3/">Post 3</a></li>
+		</ul>
+
 	</body>
 </html>
