--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,7 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
 
 ---
 
@@ -11,9 +14,7 @@
 		<title>About</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Header />
 		
 		<h1>Blog</h1>
 		<p>Welcome to our blog!</p>
@@ -26,5 +27,9 @@
       		<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
 
+		<Footer />
+		<script>
+		 import "../scripts/menu.js";
+	</script>
 	</body>
 </html>
