ajout d'un layout sur les pages index, about et blog

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,5 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "About Us";
 
@@ -35,56 +33,23 @@ const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style define:vars={{ skillColor, fontWeight, textCase }}>
-			h1{
-				color: purple;
-				font-size: 4rem;
-			}
+<BaseLayout pageTitle={pageTitle}>
+	<p>We are a team of passionate developers.</p>
+	<p>We love building amazing web applications.</p>
+	<p>We are always learning and improving our skills.</p>
+	<h2>About Me</h2>
+	<p>{identity.name}, âgé de {identity.age} ans, vit en {identity.country} et travaille comme {identity.occupation}. Il aime {identity.hobbies.join(", ")}. Vous pouvez visiter son site web à <a href="https://{identity.website}" target="_blank">{identity.website}</a> ou le contacter à <a href="mailto:{identity.contact}">{identity.contact}</a>.</p>
+	<p>Deux de mes hobbies sont {identity.hobbies[0]} et {identity.hobbies[1]}.</p>
+	<h2>Skills</h2>
+	<ul>
+		{skills.map(skill => (
+			<li class="skill">{skill}</li>
+		))}
+	</ul>
+	<p>We are always looking for new challenges and opportunities to grow.</p>
+	{happy && <p>I am happy to be learning Astro!</p>}
+	{finished && <p>I finished this tutorial!</p>}
+	{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+</BaseLayout>
 
-			.skill{
-				color: var(--skillColor);
-				font-weight: var(--fontWeight);
-				text-transform: var(--textCase);
-			}
-		</style>
-	</head>
-	<body>
-		<Header />
-
-		<h1>{pageTitle}</h1>
-		<p>We are a team of passionate developers.</p>
-		<p>We love building amazing web applications.</p>
-		<p>We are always learning and improving our skills.</p>
-
-		<h2>About Me</h2>
-		<p>{identity.name}, âgé de {identity.age} ans, vit en {identity.country} et travaille comme {identity.occupation}. Il aime {identity.hobbies.join(", ")}. Vous pouvez visiter son site web à <a href="https://{identity.website}" target="_blank">{identity.website}</a> ou le contacter à <a href="mailto:{identity.contact}">{identity.contact}</a>.</p>
-
-		<p>Deux de mes hobbies sont {identity.hobbies[0]} et {identity.hobbies[1]}.</p>
-
-		<h2>Skills</h2>
-		<ul>
-			{skills.map(skill => (
-				<li class="skill">{skill}</li>
-			))}
-		</ul>
-		<p>We are always looking for new challenges and opportunities to grow.</p>
-
-		{happy && <p>I am happy to be learning Astro!</p>}
-
-		{finished && <p>I finished this tutorial!</p>}
-
-		{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
-
-		<Footer />
-		<script>
-			import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+		
