--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,35 +1,19 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = "About Us";
 
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>About</title>
-	</head>
-	<body>
-		<Header />
+<BaseLayout pageTitle={pageTitle}>
+	<p>Welcome to our blog!</p>
+	<p>Here we share our thoughts and experiences.</p>
+	<p>Stay tuned for more updates!</p>
+	
+	<ul>
+		<li><a href="/posts/post-1/">Post 1</a></li>
+		<li><a href="/posts/post-2/">Post 2</a></li>
+		<li><a href="/posts/post-3/">Post 3</a></li>
+	</ul>
+</BaseLayout>
+
 		
-		<h1>Blog</h1>
-		<p>Welcome to our blog!</p>
-		<p>Here we share our thoughts and experiences.</p>
-		<p>Stay tuned for more updates!</p>
-
-		<ul>
-			<li><a href="/posts/post-1/">Post 1</a></li>
-			<li><a href="/posts/post-2/">Post 2</a></li>
-      		<li><a href="/posts/post-3/">Post 3</a></li>
-		</ul>
-
-		<Footer />
-		<script>
-		 import "../scripts/menu.js";
-	</script>
-	</body>
-</html>
