--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,6 +79,15 @@ h1 {
 
 }
 
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
 /* .hamburger {
     display: none;
 }
