--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,9 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BlogPost from '../components/BlogPost.astro';
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+
+const allPosts = await getCollection("blog");
 const pageTitle = "Blog";
 ---
 
@@ -11,7 +13,7 @@ const pageTitle = "Blog";
 	<p>Stay tuned for more updates!</p>
 	
 	<ul>
-		 {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+		 {allPosts.map((post: any) => <BlogPost url={`/posts/${post.id}/`} title={post.data.title} />)}
 	</ul>
 </BaseLayout>
 
